input/longhorn/manifests/route/HTTPRoute_longhorn.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
      matches:
        - headers:
          - type: RegularExpression
            name: Host
            value: "longhorn\\..*"
